--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -66,7 +66,7 @@ test:
     - pytest >=6.0
     - pytest-asyncio >=0.17
     - pytest-xdist >=1.31
-    - pytest-cov
+    - pytest-cov  # [python_impl == "cpython"]
     - boto3
     - hypothesis
     - numpy
