--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,6 +15,8 @@ build:
     - {{ PYTHON }} -m pip install -vv --no-deps --ignore-installed .  # [not unix]
     - {{ PYTHON }} -m pip install -vv --no-deps --ignore-installed . --global-option="build_ext" --global-option="-j1" --no-use-pep517  # [unix]
   skip: true  # [py<38]
+  # debug: only pypy
+  skip: true  # [python_impl != "pypy"]
 
 requirements:
   build:
